--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,11 @@
       "src": "/(.*)",
       "dest": "index.js"
     }
+  ],
+  "crons": [
+    {
+      "path": "/api/executar-cobranca",
+      "schedule": "0 12 * * 1-5"
+    }
   ]
 }
